# sistema_predicion_comercializacion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  eda.py  full_battery_report.txt  pyproject.toml  render.yaml  reporte_eda.md  requirements-api.txt  requirements.txt
.github/workflows/: deploy-frontend.yml
data/_archivo_favorita/: README.md
data/processed/: catalogo_columnas.csv  clasificacion_umbral_global.csv  correlaciones_numericas.csv  curva_pr_clasificacion_2b.csv  efecto_eventos.csv  efecto_quincena.csv  efecto_tipo_feriado.csv  estacionalidad_anual_mes.csv  estacionalidad_mes.csv  features_clustering_familias.csv  features_clustering_tiendas.csv  importancias_regresion_2a.csv  metricas_clustering_2c.json  metricas_regresion_2a.csv  metricas_regresion_2a.json  penetracion_promo_mensual.csv  perfil_segmentos_familias.csv  perfiles_clustering_familias_2c.csv  relacional_cluster_sales.csv  relacional_family_sales.csv  relacional_oil_daily.csv  relacional_store_day.csv  resumen_integracion.json  resumen_nulos_columnas.csv  sales_por_tienda.csv  segmentacion_familias.csv  segmentos_clustering_familias_2c.csv  senal_regresion.csv  silhouette_tiendas.csv  univariado_categoricas.csv  ventas_mensuales.csv  wape_recursivo_por_familia.csv  wape_recursivo_por_tienda.csv  wape_recursivo_semanal.csv
docs/: README_fase2a.md  README_fase2b_umbral.md  README_fase2c.md  SPC_Entrega_Despliegue_Valentin.md  alineacion_frontend_backend.md  auditoria_fase2a.md  contrato_datos.md  datos_sinteticos.md  guia_probar_api.md  informe_explicativo_spc.md  plan_maestro_spc.md  prediccion_agnostica.md  prompt_fase2a_regresion_2.md  reporte_clasificacion_2b.md  reporte_clustering_2c.md  reporte_eda.md  reporte_mejoras_modelos.md  reporte_regresion_2a.md
docs/decisiones/: 0002-modelo-regresion-ventas.md  0003-cierre-fase2a-regresion.md  0004-cierre-fase2a-revision.md  0005-clasificacion-almacen-2b.md  0006-clustering-perfilado-2c.md  0007-capa-api-fase3.md  0008-modos-ejecucion.md  0009-transferibilidad-modelo-congelado.md  0010-politica-inventario-stock.md  0011-persistencia-corpus-incremental.md  0012-frontend-web.md  0013-entrenamiento-por-cliente-bajo-demanda.md  0014-control-acceso-por-roles.md  0015-rediseno-frontend-experiencia.md  0016-perfil-cliente-onboarding.md  0017-identidad-visual-sistema-diseno.md  0018-catalogo-tipologias-dimensiones.md  0019-lenguaje-de-producto-glosario.md  0020-rediseno-cliente-identidad-pantallas.md  0021-ajustes-experiencia-entrada-filtros-reentrenamiento.md  0022-ventas-plantilla-datos-filtros-resultado-async.md  0023-prediccion-agnostica-auto-entrenada.md  0024-rediseno-3x3-sklearn-sintetico.md  0025-mejoras-modelos-variedad-objetivos-clustering.md  0026-retiro-motor-congelado-migracion-frontend-v2.md  0027-persistencia-postgres-supabase-corpus-acumulativo.md
docs/fase-3/: alcance_validacion_limitaciones.md  checklist_despliegue.md  experimento_aumento_datos.md  guion_demo.md  propuesta_replanteamiento_fase3.md
docs/fase-3/plantillas/: inventory_template.xlsx  purchases_template.xlsx  sales_template.xlsx
docs/spikes/: spike_eda.md  spike_enfoque_regresion.md
examples/api/: generar_auto_dominios.py  generar_auto_retail.py  generar_ejemplos.py  ventas_request.json
examples/auto_dominios/: README.md
examples/auto_dominios/clinica/: README.md  inventory_request.json  purchases_request.json  sales_request.json
examples/auto_dominios/ecommerce/: README.md  inventory_request.json  purchases_request.json  sales_request.json
examples/auto_dominios/energia/: README.md  inventory_request.json  purchases_request.json  sales_request.json
examples/auto_dominios/movilidad/: README.md  inventory_request.json  purchases_request.json  (+1 more)
frontend/: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
legacy/eda/: pipeline.py
legacy/models/: regresion.py
legacy/tests/: test_features_clasificacion.py  test_features_regresion.py  test_quality.py  test_regresion.py  test_temporal.py
migrations/: env.py
migrations/versions/: 0001_esquema_inicial.py
models/: clasificacion_v1.joblib  clasificacion_v1.meta.json  clustering_familias_v1.joblib  clustering_familias_v1.meta.json  clustering_tiendas_v1.joblib  clustering_tiendas_v1.meta.json  regresion_v1.meta.json  regresion_v2.joblib  regresion_v2.meta.json  regresion_v3.meta.json
notebooks/: eda.ipynb
notion/: README.md
notion/DO/: DO-001.md  DO-002.md
notion/EN/: EN-001.md  EN-002.md  EN-003.md  EN-004.md
notion/HU/: HU-001.md  HU-002.md  HU-003.md  HU-004.md  HU-005.md  HU-006.md  HU-007.md  HU-008.md  HU-009.md  HU-010.md
notion/RN/: RN-001.md  RN-002.md
notion/TA/: TA-001.md  TA-002.md  TA-003.md  TA-004.md  TA-005.md
scripts/: bench_umbral_online.py  evaluar_modelos.py  exportar_corpus.py  generar_datos_sinteticos.py  generar_ejemplos_peru.py  generar_ejemplos_v2.py  generar_plantillas_excel.py  generar_sinteticos.py  generar_sinteticos_peru.py  generate_notebook.py  migrar_sqlite_a_postgres.py  recalibrar_umbral_clasificacion.py  run_eda.py  run_models.py  train_clasificacion.py  train_clustering.py  train_regresion.py  validar_sinteticos.py
src/spc/: __init__.py  config.py  logging_setup.py  pipeline.py
tests/: conftest.py  sintetico.py  test_adaptador.py  test_automl_no_fuga.py  test_clasificacion.py  test_clustering.py  test_features.py  test_features_generico.py  test_features_regresion.py  test_formatters.py  test_portabilidad.py  test_quality.py  test_regresion.py  test_seguridad.py  test_seleccion_modelo.py  test_sinteticos.py  test_temporal.py  test_zoo_liviano.py
tests/api/: conftest.py  test_agnostico_api.py  test_almacen_api.py  test_auth.py  test_batch.py  test_catalog.py  test_compras_api.py  test_cors.py  test_dominios_3x3.py  test_entrenamiento_cliente.py  test_errores_api.py  test_excel.py  test_exportar_corpus.py  test_persistencia.py  test_politica_config.py  test_strict_api.py  test_ventas_api.py
(+295 files in other folders)
