[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spc"
version = "0.1.0"
description = "Sistema Predictivo de Comercializacion: API de pronostico agnostica al sector, entrenada en el momento."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Valentin Fernandez" }]
license = { text = "MIT" }
# Dependencias de RUNTIME: lo que el servicio importa al cargar, entrenar en el momento y
# predecir. Las deps solo-legacy (matplotlib/seaborn/nbformat/optuna del EDA y del
# entrenamiento retail Favorita archivado en `legacy/`) viven en el extra `legacy`.
dependencies = [
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "lightgbm==4.6.0",
    "xgboost==3.2.0",
    "imbalanced-learn==0.14.2",  # runtime: automl itera la estrategia SMOTE en vivo
    "joblib==1.5.3",
    "fastapi==0.137.1",
    "uvicorn==0.49.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.29",
    "openpyxl==3.1.5",
    "python-dotenv>=1.0",  # carga el `.env` de la raíz (Postgres/Supabase, auth) al arrancar
    # Persistencia en base de datos real (ADR-0026): SQLAlchemy como capa agnóstica al
    # motor (SQLite en tests, Postgres/Supabase en producción) + Alembic para migraciones
    # versionadas + psycopg como driver de Postgres. `supabase` opcional para el bucket de
    # artefactos (Storage); si no está configurado, los modelos caen a disco local.
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "supabase>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.9.2",
    "black==24.10.0",
    "mypy==1.14.1",
    "pandas-stubs",
]
# Deps del código archivado en `legacy/` (EDA Favorita + entrenamiento retail offline).
# No participan en el servicio en vivo; instalar solo si se revive el pipeline legacy.
legacy = [
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "nbformat==5.10.4",
    "optuna==4.1.0",
    "jupyter==1.1.1",
    "ipykernel==7.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # el largo de linea lo gestiona black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
packages = ["spc"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "tests"]
filterwarnings = [
    # El TestClient de Starlette aún usa httpx (deprecación aguas arriba, inofensiva).
    "ignore:Using `httpx` with `starlette.testclient`",
    # Cold-start esperado: categóricas del cliente fuera de las categorías entrenadas
    # caen a NaN (degradación documentada del adaptador contrato->motor).
    "ignore:Constructing a Categorical with a dtype",
]
